Crear y seleccionar modelos
Creados los endpoints para crear modeos de vehiculos y para seleccionar todos los modelos de autos que existen sin importar la marca
